Add repo_manager code dump

--- a/ark-iot-tester-cli/CMakeLists.txt
+++ b/ark-iot-tester-cli/CMakeLists.txt
@@ -1,5 +1,14 @@
 cmake_minimum_required(VERSION 3.2.2)
 
 project(Ark-IoT-Tester-CLI C CXX)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Ark-Cpp-Crypto-tests main.cpp)
+set(SRC_FILES 
+    repo_manager.cpp
+    main.cpp
+)
+
+add_executable(${PROJECT_NAME} ${SRC_FILES})
+
+target_link_libraries(${PROJECT_NAME} stdc++fs )
+
